# ataraxis-video-system

./: .gitignore  CLAUDE.md  LICENSE  README.md  automation.py  pyproject.toml  temp.py  test.py  tox.ini
.claude/skills/sun-lab-style/: SUN_LAB_STYLE_GUIDE.md
docs/source/: api.rst  conf.py  index.rst  welcome.rst
envs/: axvs_dev_lin.yml  axvs_dev_lin_spec.txt  axvs_dev_osx.yml  axvs_dev_osx_spec.txt  axvs_dev_win.yml  axvs_dev_win64.yml  axvs_dev_win64_spec.txt  axvs_dev_win_spec.txt  environment.yml
examples/: quickstart.py
resources/: arena_video_system.py  shared_memory_array_test.py
src/: ataraxis_video_system.py  captureVideoTutorial.py  main.py  multiprocessingQueueTutorial.py  old_main.py  shared_memory_array.py  temp.py  timer.py
src/ataraxis_video_system/: __init__ 3.pyi  __init__.py  __init__.pyi  alternative_camera.py  ataraxis_video_system.py  ataraxis_video_system_test.py  camera.py  camera.pyi  cli.py  cli.pyi  configuration.py  configuration.pyi  interactive_run.py  list_camera_ids.py  live 3.pyi  live.py  live.pyi  log_processing.py  log_processing.pyi  main.py  mcp_server.py  mcp_server.pyi  old_main.py  pipeline.py  saver.py  saver.pyi  shared_memory_array.py  temp.py  video_system.py  video_system.pyi
src/ataraxis_video_system/ffmpeg_backend/: avi_to_mp4.py  avi_to_mp4.pyi  tensorflow_stream.py  tensorflow_stream.pyi  webcam_to_mp4.py  webcam_to_mp4.pyi
src/ataraxis_video_system/interfaces/: __init__.py  camera_tools.py  camera_tools.pyi  cli.py  cli.pyi  configuration_tools.py  configuration_tools.pyi  discovery_tools.py  discovery_tools.pyi  mcp_execution.py  mcp_execution.pyi  mcp_instance.py  mcp_instance.pyi  mcp_server.py  mcp_server.pyi  processing_tools.py  processing_tools.pyi  session_tools.py  session_tools.pyi
src/ataraxis_video_system/video/: __init__.py  __init__.pyi  camera.py  camera.pyi  configuration.py  log_processing.py  log_processing.pyi  manifest.py  manifest.pyi  saver.py  video_system.py
src/ataraxis_video_system/video_system/: __init__.py  __init__.pyi  alternative_camera.py  alternative_camera.pyi  camera.py  interactive_run.py  interactive_run.pyi  ma.py  shared_memory_array.py  shared_memory_array.pyi  temp.py  vsc.py  vsc.pyi
src/ffmpeg/: avi_to_mp4.py  tensorflow_stream.py  webcam_to_mp4.py
src/tutorials/: captureVideoTutorial.py  run_time_control.py
src/utilities/: shared_memory_array.py
temp/: test.py
tests/: ataraxis_video_system_test.py  camera_test.py  configuration_test.py  conftest.py  log_processing_test.py  manifest_test.py  saver_test.py  scripts_test.py  utilities_test.py  video_syste.py  video_system_test.py
tests/video_system/: ataraxis_video_system_test.py
tutorials/: captureVideoTutorial.py  multiprocessingQueueTutorial.py  temp.py  timer.py
