# Defines the build system used for the project.
[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

# Project metadata section. Provides the general ID information about the project.
[project]
name = "ataraxis-video-system"
version = "3.0.0"
description = "Interfaces with a wide range of cameras to flexibly record visual stream data as video files."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.15"
authors = [
    { name = "Ivan Kondratyev" },
    { name = "Jacob Groner" },
    { name = "Natalie Yeung" },
]
maintainers = [
    { name = "Ivan Kondratyev", email = "ik278@cornell.edu" },
]

keywords = ["OpenCV", "FFMPEG", "GeniCam", "video recording", "camera interface", "ataraxis"]

classifiers = [
    # Development status
    "Development Status :: 5 - Production/Stable",
    # Intended audience and project topic
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    # Supported Python Versions
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # Supported Operating Systems
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    # Typing
    "Typing :: Typed"
]

# Runtime project dependencies.
dependencies = [
    # Array Processing
    "numpy>=2,<3",

    # Video Acquisition
    "opencv-python>=4.13,<5",
    "harvesters>=1,<2",

    # CLI
    "click>=8,<9",

    # Data Output
    "polars>=1,<2",

    # Configuration
    "platformdirs>=4,<5",

    # MCP Server
    "mcp>=1,<2",
    "httpx>=0.27,<1",

    # Ataraxis Libraries
    "ataraxis-time>=6,<7",
    "ataraxis-base-utilities>=6,<7",
    "ataraxis-data-structures>=6,<7",
]

[project.urls]
Homepage = "https://github.com/Sun-Lab-NBB/ataraxis-video-system"
Documentation = "https://ataraxis-video-system-api-docs.netlify.app/"

# Exposes a CLI interface to query available camera IDs and interactively interface with the available cameras.
[project.scripts]
axvs = "ataraxis_video_system.cli:axvs_cli"

# Development dependencies (PEP 735). Not published to PyPI.
[dependency-groups]
dev = [
    # Tox
    "tox>=4,<5",
    "uv>=0,<1",
    "tox-uv>=1,<2",

    # Development Automation
    "ataraxis-automation>=8,<9",

]

# Specifies files that should not be included in the source-code distribution.
[tool.hatch.build.targets.sdist]
exclude = [".github", "recipe"]

# Specifies the library structure.
[tool.hatch.build.targets.wheel]
packages = ["src/ataraxis_video_system", "examples"]

# Ruff Configuration.
[tool.ruff]
line-length = 120         # Deviates from the commonly used '80' standard.
indent-width = 4          # Same as black, indents are 4 spaces
target-version = "py312"  # Targets the lowest supported version of python
src = ["src"]             # The name of the root source code directory

# Excludes 'service' .py files, such as the sphinx configuration file, from linting.
extend-exclude = ["conf.py"]

# Checks for all potential violations and uses the exclusions below to target-disable specific ones.
lint.select = ["ALL"]

# General ignore directives
lint.ignore = [
    "W291",    # Conflicts with docstring formatting
    "C901",    # Sometimes complex functions are necessary
    "PLR0913", # Sometimes complex functions are necessary
    "PLR0912", # Sometimes complex functions are necessary
    "PLR0915", # Sometimes complex type definitions are necessary
    "PLR0911", # Sometimes complex return graphs are necessary
    "COM812",  # Conflicts with the formatter
    "ISC001",  # Conflicts with the formatter
    "PT001",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-182590771
    "PT023",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "D107",    # __init__ is documented inside the main class docstring where applicable
    "D205",    # Bugs out for file descriptions
    "PLW0603", # While global statement usage is not ideal, it streamlines certain development patterns
    "ANN401",  # Any returns are necessary for some library functions
    "BLE001",  # Blind exception catching is necessary for Python-FFMPEG pipe error interception
    "S602",    # Subprocess calls are necessary for interfacing with the FFMPEG library
    "TID252",  # Conflicts with library import management strategy
]

# Additional formatting configurations
[tool.ruff.format]
quote-style = "double"             # Uses double quotes for strings
indent-style = "space"             # Uses space for indents
skip-magic-trailing-comma = false  # Like black, ignores trailing commas
line-ending = "auto"               # Automatically detects and standardizes line-ending character

# Docstrings and comments' line length
[tool.ruff.lint.pycodestyle]
max-doc-length = 120  # Maximum documentation line length, the same as code

# Docstrings style
[tool.ruff.lint.pydocstyle]
convention = "google"

# Additional, file-specific 'ignore' directives
[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]
"tests/**/*.py" = [
    "S101",    # assert usage is expected in tests
    "SLF001",  # Private member access is expected in tests
    "PLR2004", # Magic values are expected in test data
    "S607",    # Partial executable paths are acceptable in tests
    "S311",    # Standard pseudo-random generators are acceptable in tests
    "ANN001",  # Test function parameter annotations add noise without benefit
    "ANN201",  # Fixture return type annotations add noise without benefit
    "INP001",  # Tests directory does not need __init__.py
]

[tool.ruff.lint.isort]
case-sensitive = true              # Takes case into account when sorting imports
combine-as-imports = true          # Combines multiple "as" imports for the same package
force-wrap-aliases = true          # Wraps "as" imports so that each uses a separate line
force-sort-within-sections = true  # Forces "as" and "from" imports for the same package to be close
length-sort = true                 # Places shorter imports first

# MyPy configuration section.
[tool.mypy]
# Strict mode settings (equivalent to --strict)
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

# Extra checks (equivalent to --extra-checks)
extra_checks = true

# Pretty output (equivalent to --pretty)
pretty = true

exclude = [
    "ataraxis-video-system-\\d+",   # Ignores temporary folder created by setuptools when building the sdist
    "venv.*/",                      # Ignores virtual environments
    "build/",                       # Ignores the sdist directory
    "dist/",                        # Ignores the wheel directory
    "docs/",                        # Ignores the sphinx / doxygen directory
    "stubs/",                       # Ignores stubs directory (stubgen output target)
    "recipe/",                      # Ignores recipe directory (grayskull output target)
    "tests/",                       # Ignores the test directory.
]

# This is used by the 'test' tox tasks to aggregate coverage data produced during pytest runtimes.
[tool.coverage.paths]

# Maps coverage measured in site-packages to source files in src
source = ["src/", ".tox/*/lib/python*/site-packages/"]

# Same as above, specifies the output directory for the coverage .html report
[tool.coverage.html]
directory = "reports/coverage_html"

# Optimizes coverage generation for parallel testing
[tool.coverage.run]
parallel = true

# Specifies additional ignore directives
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __del__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
